ie bug fix, center selection alignement

--- a/pre-registration-ui/src/app/feature/booking/center-selection/center-selection.component.css
+++ b/pre-registration-ui/src/app/feature/booking/center-selection/center-selection.component.css
@@ -194,7 +194,7 @@ input[type='radio'] {
   display: none;
 }
 .search-input {
-  padding: 10px;
+  padding: 10px 10px 6px;
   outline: none;
   color: #000000;
   font-family: Roboto;
