--- a/pre-registration-ui/src/app/feature/demographic/demographic/demographic.component.css
+++ b/pre-registration-ui/src/app/feature/demographic/demographic/demographic.component.css
@@ -418,7 +418,7 @@ textarea.mat-input-element{
   margin-bottom: -14px;
 }
 #complementadr{
-  margin-bottom: -10px;
+  margin-bottom: -6px;
   font-weight: 300;
   font-family: Roboto;
   font-size: 15px;
